--- a/package.json
+++ b/package.json
@@ -11,18 +11,19 @@
   "devDependencies": {
     "browser-sync": "^2.26.7",
     "del": "^5.1.0",
-    "gulp": "^3.9.1",
+    "gulp": "^4.0.2",
     "gulp-autoprefixer": "^7.0.1",
     "gulp-cache": "^1.1.3",
-    "gulp-clean-css": "^4.2.0",
+    "gulp-clean-css": "^4.3.0",
     "gulp-concat": "^2.6.1",
-    "gulp-imagemin": "^6.2.0",
+    "gulp-imagemin": "^7.1.0",
     "gulp-notify": "^3.2.0",
-    "gulp-rename": "^1.4.0",
+    "gulp-rename": "^2.0.0",
     "gulp-rsync": "0.0.8",
-    "gulp-sass": "^4.0.2",
+    "gulp-sass": "^4.1.0",
+    "gulp-terser": "^1.2.0",
     "gulp-uglify": "^3.0.2",
-    "gulp-util": "^3.0.8",
+    "gulp-uglify-es": "^2.0.0",
     "vinyl-ftp": "^0.6.1"
   }
 }
